--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^7.2.0",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.17.2",
+    "swiper": "^11.2.5",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
