--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.6",
+    "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.0.9",
+    "@tanstack/react-query": "^5.68.0",
+    "axios": "^1.8.3",
     "firebase": "^11.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
+    "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.5",
