--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.8.3",
     "firebase": "^11.4.0",
     "react": "^18.3.1",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
