--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.5.0",
     "@mui/material": "^6.4.6",
     "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.0.9",
@@ -24,6 +25,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
+    "react-tabbordion": "^1.0.6",
     "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.17.2",
