--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
+    "react-router-dom": "^7.6.3",
     "react-tabbordion": "^1.0.6",
     "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.5",
