--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.6.3",
