--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-tabs": "^6.1.0",
     "react-tag-input-component": "^2.0.2",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.2",
     "sweetalert2": "^11.22.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.0.9"
